[package]
name = "tiktoken_shim"
version = "0.1.0"
edition = "2024"

[lib]
name = "tiktoken_shim"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha1 = "0.10"
sha2 = "0.10"
tiktoken = { git = "https://github.com/openai/tiktoken", tag = "0.12.0" }
